--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </head>
 <body>
 <h1> image grid tasks </h1>
-<a href="C:\Users\DELL\Desktop\griiiii.html">task1</a>
-<a href="C:\Users\DELL\Desktop\normal grid.html">task2</a>
-<a href="C:\Users\DELL\Desktop\phtotosg.html">task3</a>
+<a href="./index1.html">task1</a>
+<a href="./index2.html">task2</a>
+<a href="./index..html">task3</a>
 </body>
 </html>
